# takbag

./: .clang-format  .gitignore  CMakeLists.txt  Draw.ptn  Game.h  LongStackyGame.ptn  Move.h  Player.h  Position.h  PtnFile.h  README.md  Square.h  Stone.h  ptn.h  tak.cpp  tak.h
benchmarks/: benchmarks.txt
games/: DragonClause.ptn  FlatLoss.ptn  GaveWin.ptn  RoadWin.ptn  ShortDump.ptn  SimmonAllyRyderCupMatch.ptn  StackySevens.ptn  TiltakVsTakoSize6.ptn
source/: CMakeLists.txt  DropCountGenerator.h  EnumBitOps.h  Game.h  Generator.h  Lexer.h  Move.h  Node.h  PieceCounts.h  Player.h  Position.h  Ptn.h  PtnFile.h  PtnGame.h  PtnParser.h  Result.h  Square.h  Stone.h  tak.cpp  tak.h
source/engine/: CMakeLists.txt  Engine.cpp  Engine.h  MonteCarlo.h  OpeningBook.cpp  OpeningBook.h  Openings.txt  TranspositionTable.cpp  TranspositionTable.h
source/log/: CMakeLists.txt  LogLevel.h  Logger.h  RootLogger.cpp  RootLogger.h
source/other/: ArgParse.h  EnumBitOps.h  SizeChecker.h  StringOps.h  StringSplit.h  Time.h
source/playtak/: CMakeLists.txt  PlaytakClient.cpp  PlaytakClient.h  ServerMove.h  TcpClient.cpp  TcpClient.h
source/ptn/: CMakeLists.txt  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Node.h  Parser.cpp  Parser.h  Ptn.h  PtnGame.h  PtnParser.h  Token.h
source/tak/: CMakeLists.txt  Direction.h  DropCountGenerator.h  Game.cpp  Game.h  HashCombine.h  Move.h  MoveBuffer.h  Player.h  Position.cpp  Position.h  Result.h  RobinHoodHashes.h  Shift.cpp  Shift.h  Square.cpp  Square.h  Stone.h  Tps.h  cmdLine.h  playtak.h  tak.cpp  tei.h
source/tcp/: TcpClient.cpp  TcpClient.h
test/: CMakeLists.txt  Openings.txt  bench.cpp  benchmark.h  perft.h  testEngine.cpp  testMoveGenerator.cpp  testOpeningBook.cpp  testPosition.cpp  testPtnParser.cpp  testTranspositionTable.cpp  utility.h
